--- a/styles/base.css
+++ b/styles/base.css
@@ -34,7 +34,7 @@
   }
 
   body {
-    @apply bg-base text-text mx-auto! flex min-h-screen max-w-3xl flex-col px-4 font-sans font-medium antialiased;
+    @apply bg-base text-text mx-auto! flex min-h-screen max-w-3xl flex-col px-4 font-sans font-medium tabular-nums antialiased;
     @apply selection:bg-muted/20;
   }
 
