style: optimize css to support syntax highlighting

--- a/styles/base.css
+++ b/styles/base.css
@@ -73,9 +73,11 @@
   blockquote {
     @apply bg-surface block rounded-lg px-3 py-1;
 
-    p:first-child::before,
-    p:last-child::after {
-      content: none !important;
+    p {
+      &:first-child::before,
+      &:last-child::after {
+        content: none !important;
+      }
     }
   }
 }
