feat: add heatmap

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -117,8 +117,16 @@
   }
 }
 
+@utility scrollbar-hide {
+  scrollbar-width: none;
+}
+
 @utility text-shadow {
   text-shadow: 1px 1px 3px hsl(var(--color-text) / 0.3);
+}
+
+@utility text-2xs {
+  @apply text-[10px];
 }
 
 @utility noise-bg {
