--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@
   }
 
   blockquote {
-    @apply bg-overlay block rounded-lg px-3 py-1;
+    @apply bg-surface block rounded-lg px-3 py-1;
 
     p {
       &:first-child::before,
