--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -63,7 +63,7 @@
   }
 
   p {
-    @apply bg-overlay mt-0 mb-12 rounded-lg px-4 py-3;
+    @apply text-text bg-overlay mt-0 mb-12 rounded-lg px-4 py-3;
   }
 
   blockquote {
@@ -72,18 +72,18 @@
 }
 
 @utility menu-button {
-  @apply text-subtle hover:bg-muted/20 inline-block w-full cursor-pointer rounded-lg px-3 py-2 text-center leading-none font-semibold transition-all duration-300;
+  @apply text-subtle hover:bg-overlay inline-block w-full cursor-pointer rounded-lg px-3 py-2 text-center leading-none font-semibold transition-all duration-300;
   @apply data-[isactive='true']:text-rose;
 }
 
 @utility tiny-button {
   @apply text-subtle inline-block cursor-pointer rounded-lg leading-none font-semibold transition-all duration-300;
-  @apply hover:bg-muted/20;
-  @apply border-muted/20 bg-muted/10 border px-2 py-1;
+  @apply hover:brightness-95;
+  @apply bg-overlay border px-2 py-1;
 }
 
 @utility link {
-  @apply text-iris relative inline-block w-fit pr-2 underline decoration-transparent! underline-offset-2 duration-300 hover:decoration-current!;
+  @apply relative inline-block w-fit pr-2 underline decoration-transparent! underline-offset-2 duration-300 hover:decoration-current!;
 
   &::before {
     @apply absolute top-1/2 -right-0.5 -translate-y-[1.3em] text-xs transition-all duration-300 content-['┓'];
