refactor: adjust theme color

--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,7 @@
   *,
   ::after,
   ::before {
-    @apply border-muted/20;
+    @apply border-overlay;
   }
 
   html {
@@ -39,7 +39,7 @@
   }
 
   kbd {
-    @apply bg-overlay text-subtle flex items-center gap-1 rounded-lg border px-1.5 py-1 leading-none font-semibold uppercase transition hover:brightness-95;
+    @apply bg-overlay text-subtle flex items-center gap-1 rounded-lg px-2 py-1 leading-none font-semibold uppercase transition hover:brightness-95;
   }
 
   h2,
