refactor: optimize github api

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -63,7 +63,7 @@
   }
 
   p {
-    @apply text-text bg-overlay mt-0 mb-12 rounded-lg px-4 py-3;
+    @apply text-text bg-overlay mt-0 mb-12 rounded-lg px-4 py-3 last:mb-0;
   }
 
   blockquote {
